Fixing overflow issues
+ Fixing/hiding overflow markers for various components

--- a/src/views/auth/Register.module.scss
+++ b/src/views/auth/Register.module.scss
@@ -2,7 +2,6 @@
 
 .component {
   background: $Box;
-  overflow-y: scroll;
   display: flex;
   flex-direction: column;
 }
