--- a/src/views/dashboard/Dashboard.module.scss
+++ b/src/views/dashboard/Dashboard.module.scss
@@ -2,7 +2,7 @@
 
 .component {
   background: $Box;
-  overflow-y: scroll;
+  overflow-y: auto;
   display: flex;
   flex-direction: column;
 }
